fixing overflowing

--- a/src/about.css
+++ b/src/about.css
@@ -4,34 +4,32 @@
 
 .sections {
   padding: 2rem 0;
-  /* margin: 0 auto; */
+  margin: 0 auto;
   align-items: center;
   display: grid;
   place-items: center;
+  border: 4px solid red;
+  margin: 10px;
+  max-width: 100%;
+  /* overflow-x: hidden; */
 }
 
 .title {
   text-align: center;
-  margin-bottom: 4rem;
+
+  margin-bottom: 0.5rem;
   color: var(--clr-white);
 }
 .about-center {
   display: grid;
-  grid-template-columns: 1.5fr 0.5fr;
+  grid-template-columns: repeat(2, 620px);
   column-gap: 2rem;
   margin: 0 auto;
-}
-.section-center {
-  width: 100vw;
-  margin: 0 auto;
-  max-width: 1170px;
-}
-.about-content {
   padding: 2rem 1.5rem;
-  max-width: 100%;
-  margin: 0;
+  width: 100vw;
 }
-@media screen and (max-width: 820px) {
+
+@media screen and (max-width: 1000px) {
   .sections {
     margin: 0;
   }
@@ -45,7 +43,7 @@
   }
 
   .about {
-    width: 85%;
+    width: 99%;
   }
   .about-content {
     padding: 1rem 0.9rem;
@@ -56,11 +54,16 @@
     margin: 0;
   }
   .about-img {
-    max-width: 100%;
+    max-width: fit-content;
+    align-items: center;
   }
   .title {
     width: 100%;
     margin-bottom: 1rem;
+  }
+  .title button {
+    margin: 0 auto;
+    padding: 10px;
   }
   .btn {
     min-width: 20px;
@@ -69,30 +72,23 @@
     align-items: center;
     font-size: 0.555rem;
   }
-  .experience {
-    visibility: hidden;
-    width: 0;
-    /* padding: 0;
-    margin: 0; */
-  }
   .btn-container {
-    display: none;
+    /* display: block; */
   }
 }
 
-@media screen and (max-width: 400px) {
-  .sections {
-    width: 100%;
+@media screen and (max-width: 414px) {
+  .experience {
+    visibility: hidden;
   }
-  .about-img img {
-    max-width: 85%;
-    margin: 0;
+  .sections {
+    max-width: 100%;
   }
 }
 .about-img img {
   border-radius: var(--radius);
   object-fit: cover;
-  width: 25rem;
+  width: 99%;
 }
 .title p {
   width: 90%;
@@ -103,6 +99,7 @@
 .about {
   background: rgb(255, 255, 255, 0.9);
   border-radius: var(--radius);
+  padding-left: 10px;
 }
 
 .btn-container {
@@ -132,31 +129,15 @@
 }
 /* hide content ends*/
 
-// footers start
-.nav {
-}
-.social-icons {
-  // justify-self: align-right;
-  display: flex;
-  justify-content: space-around;
-  padding: 0.5rem;
-}
-.social-icons a {
-  font-size: 1.1rem;
-  margin: 0.5rem 0;
-  color: var(--clr-primary-1);
-  transition: var(--transition);
-}
-.social-icons a:hover {
-  color: var(--clr-primary-8);
-}
 .client {
   display: flex;
-  margin: 10px 0;
-  justify-content: space-around;
+  margin: 20px 0;
 }
 .client img {
-  width: 150px;
+  max-width: 150px;
   padding-right: 5px;
   border-radius: 1rem;
+}
+.client p {
+  width: 290px;
 }
