--- a/src/style.css
+++ b/src/style.css
@@ -296,7 +296,7 @@ body {
   font-size: 1rem;
   position: fixed;
   bottom: 1rem;
-  right: 7rem;
+  left: 3rem;
   padding: 0.3rem;
   box-shadow: var(--dark-shadow);
   border-radius: var(--radius);
